--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
         <!-- About Me -->
         <header class="header">
 
-            <img src="/assets/img/my-photo.jpg" alt="Foto do Bernardo A. Alves." class="photo">
+            <img src="/assets/img/my-photo.jpg" alt="Foto de Perfil" class="photo profile.photo">
 
             <h1 class="title">
                 Olá,
                 <br>
-                me chamo Bernardo A. Alves.
+                me chamo <span class="profile.name">Loading...</span>
             </h1>
 
             <div class="information">
-                <p class="job">Desenvolvedor Junior</p>
-                <p class="location">Brasília - DF</p>
+                <p class="job"><span class="profile.job">Loading...</span></p>
+                <p class="location"><span class="profile.location">Carregando...</span></p>
                 <p class="phone">
-                    <a href="tel:(77) 9 9910-3979">(77) 9 9910-3979</a>
+                    <a href="tel:(77) 9 9910-3979" class="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:bernardoaraujoalves@gmail.com">bernardoaraujoalves@gmail.com</a>
+                    <a href="mailto:bernardoaraujoalves@gmail.com" class="profile.email">carregando@gmail.com</a>
                 </p>
             </div>
 
@@ -109,7 +109,7 @@
         </section>
 
         <!-- Education -->
-        <section class="acordeon open">
+        <section class="acordeon">
 
             <button class="trigger" type="button">
                 <h2>Educação</h2>
