--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
         <!-- About Me -->
         <header class="header">
 
-            <img src="/assets/img/my-photo.jpg" alt="Foto de Perfil" class="photo profile.photo">
+            <img src="/assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
                 Olá,
                 <br>
-                me chamo <span class="profile.name">Loading...</span>
+                me chamo <span id="profile.name">Loading...</span>
             </h1>
 
             <div class="information">
-                <p class="job"><span class="profile.job">Loading...</span></p>
-                <p class="location"><span class="profile.location">Carregando...</span></p>
+                <p class="job" id="profile.job">Loading...</p>
+                <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="tel:(77) 9 9910-3979" class="profile.phone">Carregando...</a>
+                    <a href="tel:(77) 9 9910-3979" id="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:bernardoaraujoalves@gmail.com" class="profile.email">carregando@gmail.com</a>
+                    <a href="mailto:bernardoaraujoalves@gmail.com" id="profile.email">carregando@gmail.com</a>
                 </p>
             </div>
 
@@ -75,13 +75,10 @@
 
                     <section class="personal">
                         <h3>Habilidades pessoais:</h3>
-                        <ul>
-                            <li>Pensamento analítico resolução de problemas;</li>
-                            <li>Comunicação e colaboração;</li>
-                            <li>Visão de negócios;</li>
-                            <li>Flexibilidade e capacidade de se adaptar a mudanças;</li>
-                            <li>Proatividade;</li>
-                            <li>Trabalho remoto.</li>
+                        <ul id="profile.skills.softSkills">
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
                         </ul>
                     </section>
                 </div>
