--- a/index.html
+++ b/index.html
@@ -61,18 +61,16 @@
 
             <div class="content">
 
+                <!-- hardSkills -->
                 <div class="skills">
                     <section class="tools">
                         <h3>Ferramentas:</h3>
-                        <ul>
-                            <li><img src="/assets/img/icons/html-icon.svg" alt="HTML"></li>
-                            <li><img src="/assets/img/icons/css-icon.svg" alt="CSS"></li>
-                            <li><img src="/assets/img/icons/js-icon.svg" alt="JavaScript"></li>
-                            <li><img src="/assets/img/icons/php-icon.svg" alt="PHP"></li>
-                            <li><img src="/assets/img/icons/postgres-icon.svg" alt="PostgreSQL"></li>
+                        <ul id="profile.skills.hardSkills">
+
                         </ul>
                     </section>
 
+                    <!-- softSkills -->
                     <section class="personal">
                         <h3>Habilidades pessoais:</h3>
                         <ul id="profile.skills.softSkills">
