--- a/index.html
+++ b/index.html
@@ -114,17 +114,15 @@
                     <section class="certificates">
                         <h3 class="title-certificates">Certificados:</h3>
                         <ul class="education1" id="profile.education">
-                            <a href="#">
-                                <li><img src="https://hermes.dio.me/tracks/62ed1f1d-8d76-4bbc-905f-e73d20cb82f5.png"alt="HTML" title="Certificado HTML"></li>
-                            </a>
+                            
                         </ul>
 
-                        <ul class="education2">
+                        <ul class="education2" id="profile.education.description">
 
                             <li>
-                                <h3 class="title">Centro Universitário de Brasilia</h3>
-                                <span> UNICEUB - 6° semestre</span>
-                                <span class="calendar-college">01/2022 - 12/2025</span>
+                                <h3 class="title">Loading...</h3>
+                                <span>Loading...</span>
+                                <span class="calendar-college">Loading...</span>
                             </li>
 
                         </ul>
