--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                         </ul>
 
-                        <ul class="education2" id="profile.education.description">
+                        <ul class="education2" id="profile.description">
                             <li>
                                 <h3 class="title">Loading...</h3>
                                 <span>Loading...</span>
