--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <p class="job" id="profile.job">Loading...</p>
                 <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="tel:(77) 9 9910-3979" id="profile.phone">Carregando...</a>
+                    <a href="https://wa.me//+5577999103979" id="profile.phone" target="_blank">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:bernardoaraujoalves@gmail.com" id="profile.email">carregando@gmail.com</a>
+                    <a href="mailto:bernardoaraujoalves@gmail.com" id="profile.email" target="_blank">carregando@gmail.com</a>
                 </p>
             </div>
 
